Fixing Gap take 1

--- a/resources/style.css
+++ b/resources/style.css
@@ -1,10 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Oswald&display=swap");
 
+html {
+  height: 100%;
+}
+
+body {
+  min-height: 100%
+}
+
 html,
 body {
   margin: 0;
   padding: 0;
-  min-height: 100vh;
 }
 
 .oswald {
